# image-editor

./: CLAUDE.md  PERFORMANCE.md  README.md  TODO.md  index.html  package-lock.json  package.json  typedoc.json  vite.config.ts
.github/workflows/: deploy.yml
crates/image-app/: Cargo.toml
crates/image-app/benches/: performance.rs
crates/image-app/src/: lib.rs
crates/image-app/src/adjustments/: mod.rs
crates/image-app/src/filters/: mod.rs
crates/image-app/src/transforms/: mod.rs
crates/image-app/src/utils/: mod.rs
public/: imageWorker.js
public/assets/: image_app.d.ts  image_app.js  image_app_bg.wasm
scripts/: benchmark.sh  build-wasm-optimized.sh  copy-wasm-assets.sh  generate-docs.sh
src/: App.css  App.tsx  index.css
src/components/: AdjustmentSlider.tsx  AdvancedAdjustments.tsx  AppHeader.tsx  BasicAdjustments.tsx  FilterControls.tsx  HistogramDisplay.tsx  PresetManager.tsx  TransformTools.tsx  index.ts
src/components/__tests__/: AdjustmentSlider.test.tsx  BasicAdjustments.test.tsx
src/hooks/: useImageWorker.ts
src/tests/: image-processing.test.tsx  processing-state.test.tsx
