[package]
name = "image-app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = false

[profile.release.package."*"]
opt-level = 3

[dependencies]
wasm-bindgen = "0.2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
rayon = "1.7"

[dependencies.wide]
version = "0.7"
optional = true

[features]
default = []
simd = ["wide"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "performance"
harness = false
